# RTCON

./: .gitignore  Dockerfile  README.md  build.sh  config.yml  docker-compose.yml  run_fuzz.py  targets.txt
cfg/: analyze_cfg.py  analyze_mta.py  config_reducer.py  create_compile_commands.py  create_dummy.py  userconfig.py
eval/calc_coverage/: get_coverage.py
eval/calc_coverage/FuzzSlice_ThreadX/1hout/: netxduo
eval/calc_coverage/RIOT/1hour/: gnrc  nimble
eval/calc_coverage/ThreadX/1hour/: netxduo
eval/calc_coverage/ThreadX/3hour/: netxduo
eval/calc_coverage/Zephyr/3hour/: bluetooth
eval/config/: freertos-app-full-func-list.txt  freertos-app-func-list-reduced.txt  freertos-cell-intf-func-list.txt  freertos-cell-mod-func-list.txt  freertos-tcp-full-func-list.txt  freertos-tcp-func-list.txt  riot-full-func-list.txt  riot-func-list-reduced.txt  riot-manual-func-list.txt  threadx-full-func-list.txt  threadx-func-list-reduced.txt  threadx-func-list.txt  zephyr-full-func-list.txt  zephyr-func-list-reduced.txt  zephyr-func-list.txt  zephyr-small-func-list.txt
eval/config/ablation/: ablation-riot-func-list.txt  ablation-zephyr-func-list.txt
eval/config/fuzzgen/: fuzzgen-freertos-app-fuzzer-list.txt  fuzzgen-freertos-tcp-fuzzer-list.txt  fuzzgen-riot-fuzzer-list.txt  fuzzgen-threadx-fuzzer-list.txt  fuzzgen-zephyr-fuzzer-list.txt
eval/config/fuzzslice/: fuzzslice-freertos-app-func-list.txt  fuzzslice-freertos-cell-mod-func-list.txt  fuzzslice-freertos-tcp-func-list.txt  fuzzslice-riot-func-list.txt  fuzzslice-zephyr-func-list.txt
eval/config/manual/: manual-freertos-cell-intf-func-list.txt  manual-threadx-func-list.txt  manual-zephyr-func-list.txt
eval/find_funcs/: .gitignore  check_freertos.py  freertos_prompt.txt  func_util.py  get_freertos_raw.py  get_freertos_tcp_netbuf.py  get_riot_gnrc_pktsnip.py  get_riot_nimble.py  get_threadx_nxpacket.py  get_zephyr_net_buf.py
eval/scripts/: config.py  func_list_manager.py  run.py  run_cov.py  run_cov_web.py  run_eval.py  run_fuzz_cross.py  run_fuzz_single.py  view_coverage.py  view_eval.py  view_result.py
pass/: CMakeLists.txt  Pass.cpp  cgcc.in  cov-cgcc.in  readFunc.cpp  ryml_all.hpp
pass/skel/: crash.c  crash.h  fuzz.c  fuzz.h  hook.c  hook.h  main.c
projects/FreeRTOS/: Dockerfile  build.sh  test_selector.py
projects/FreeRTOS/Application_Protocols_Fuzz/: Makefile  Makefile.cov  Makefile.native  build_fuzzer.py  main.c  main_native.c
projects/FreeRTOS/FreeRTOS_Plus_Cellular_Interface_Fuzz/: Makefile  Makefile.cov  Makefile.native  build_fuzzer.py  main.c  main_cov.c
projects/FreeRTOS/FreeRTOS_Plus_Cellular_Interface_Fuzz/additional/: cellular_mock.c
projects/FreeRTOS/FreeRTOS_Plus_Cellular_Modules_Fuzz/: FreeRTOSConfig.h  Makefile  Makefile.cov  Makefile.native  build_fuzzer.py  main.c
projects/FreeRTOS/FreeRTOS_Plus_Cellular_Modules_Fuzz/additional/: cellular_mock.c
projects/FreeRTOS/FreeRTOS_Plus_TCP_Fuzz/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  Makefile  Makefile.cov  Makefile.native  build_fuzzer.py  main.c
projects/FreeRTOS/FreeRTOS_Plus_TCP_Fuzz/additional/: FreeRTOS_stubs.c
projects/RIOT/: Dockerfile  apply_patch.sh  build.sh  build_fuzzer.py  make_seeds.py  test_selector.py
projects/RIOT/appfuzz/: Makefile  dummy.c  main.c
projects/RIOT/appnative/: Makefile
projects/RIOT/makefiles/: llvm-cgcc.inc.mk  llvm-cov-cgcc.inc.mk  llvm-native.inc.mk
projects/RIOT/patch/: auto_init.c.pat  init.c.pat  irq_cpu.c.pat  makefile.include.pat  native.inc.mk.pat  nimble_autoconn.c.pat  nimble_rpble.c.pat
projects/ThreadX/: Dockerfile  build.sh  test_selector.py
projects/ThreadX/cmake/: linux.cmake  linux.cov.cmake  linux.native.cmake
projects/ThreadX/fuzz/: CMakeLists.txt  build_fuzzer.py
projects/ThreadX/fuzz/lib/: CMakeLists.txt
projects/ThreadX/fuzz/lib/threadx/: tx_user.h
projects/ThreadX/fuzz/native/: CMakeLists.txt
projects/ThreadX/fuzz/src/: CMakeLists.txt  crash.c  crash.h  dummy.c  main.c  main_cov.c
projects/Zephyr/: Dockerfile
projects/Zephyr/fuzz/: CMakeLists.txt  Kconfig  apply_patch.sh  build.sh  build_fuzzer.py  prj.conf  prj.native.conf  test_selector.py
projects/Zephyr/fuzz/src/: apply_patch.sh  main.c  main_cov.c  main_native.c
projects/Zephyr/fuzz/src/patch/: l2cap_br.c.pat  main.c.pat
skel/: config_default.yaml  crash.c  fuzz.c  hashmap.c  hook.c  hook.h  main.c  main_cov.c  main_freertos.c
